# loanly-fans

./: Anchor.toml  README.md  makefile
programs/loanly-fans/: Cargo.toml
programs/loanly-fans/src/: error.rs  lib.rs
programs/loanly-fans/src/errors/: initialize_contract.rs  loan_confirm.rs  loan_paid.rs  mod.rs
programs/loanly-fans/src/instructions/: intitialize.rs  intitialize_contract.rs  loan_confirm.rs  loan_paid.rs  mod.rs
programs/loanly-fans/src/states/: contract.rs  loaner_history.rs  mod.rs
tests/: loanly-fans.ts
